# lang

./: CMakeLists.txt  main.cpp  main.txt
include/lexer/: ident_table.hpp  scanner.hpp  token.hpp  token_type.hpp
src/lexer/: scanner.cpp
tests/: CMakeLists.txt  lexer_cases.cpp
